[Minor] Code cleanup in ObjectFilter and ObjectCache